bugfix for wrapped row of buttons

--- a/docs/_static/css/smap.css
+++ b/docs/_static/css/smap.css
@@ -3,3 +3,6 @@ div.table-responsive table {
     table-layout: fixed;
     word-wrap: break-word;
 }
+.btn-primary {
+    margin: 2px 0px;
+}
